--- a/genpi-website/src/app/globals.css
+++ b/genpi-website/src/app/globals.css
@@ -96,3 +96,45 @@ body,
   padding: 2px 4px 2px 4px;
   margin-top: 12px;
 }
+
+.ketik {
+  list-style: none;
+  color: #ffc711;
+  font-size: 60px;
+  font-weight: 500;
+  position: relative;
+  top: 0;
+  animation: slide 14s steps(4) infinite;
+}
+@keyframes slide {
+  100% {
+    top: -360px;
+  }
+}
+
+ul li span {
+  position: relative;
+  margin: 5px 0;
+  line-height: 90px;
+}
+ul li span::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  height: 78px;
+  width: 100%;
+  background: #ffffff;
+  border-left: 2px solid black;
+  animation: typing 8s steps(10) infinite;
+}
+
+@keyframes typing {
+  40%,
+  60% {
+    left: calc(100% + 30px);
+  }
+
+  100% {
+    left: 0;
+  }
+}
