--- a/genpi-website/src/app/globals.css
+++ b/genpi-website/src/app/globals.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 :root {
+  --gradient: linear-gradient(
+    173.1deg,
+    rgba(226, 66, 249, 0.94) 10.2%,
+    rgba(79, 147, 249, 1) 77.3%
+  );
   /* Customize these variable */
   /* https://github.com/adamwathan/tailwind-css-variable-text-opacity-demo */
   /* /* --tw-clr-primary-50: #eff0fe;
@@ -95,4 +100,22 @@ body,
 .card-content {
   padding: 2px 4px 2px 4px;
   margin-top: 12px;
+}
+
+/* background color */
+.body {
+  background-image: var(--gradient);
+  min-height: 100vh;
+  background-color: #eaeaea;
+  background-size: 300%;
+  animation: gradient-animation 25s infinite alternate;
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: left;
+  }
+  100% {
+    background-position: right;
+  }
 }
