--- a/genpi-website/src/app/globals.css
+++ b/genpi-website/src/app/globals.css
@@ -102,7 +102,6 @@ body,
   margin-top: 12px;
 }
 
-
 /* background color */
 .body {
   background-image: var(--gradient);
@@ -118,6 +117,8 @@ body,
   }
   100% {
     background-position: right;
+  }
+}
 
 .ketik {
   list-style: none;
@@ -158,6 +159,5 @@ ul li span::after {
 
   100% {
     left: 0;
-
   }
 }
